tests/files/flow_controller_tests/should_run/098.cmdr
x = 1.2;
print arccsc(x);