tests/files/flow_controller_tests/should_fail/088.cmdr
x = true;
print arccsc(x);